--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular2-classrooms-static",
-  "version": "0.0.0",
+  "name": "angular2-classrooms",
+  "version": "0.0.1",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -13,46 +13,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.3",
-    "@angular/compiler": "2.0.0-rc.3",
-    "@angular/core": "2.0.0-rc.3",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.3",
-    "@angular/platform-browser": "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "@angular/router": "3.0.0-alpha.8",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+
+    "@angular/forms": "0.3.0",
+    "@angular/router": "3.0.0-rc.1",
+
     "es6-shim": "0.35.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
+    "systemjs": "0.19.31",
     "zone.js": "0.6.12",
 
-    "@angular2-material/core": "2.0.0-alpha.6",
-    "@angular2-material/button": "2.0.0-alpha.6",
-    "@angular2-material/card": "2.0.0-alpha.6",
-    "@angular2-material/checkbox": "2.0.0-alpha.6",
-    "@angular2-material/icon": "2.0.0-alpha.6",
-    "@angular2-material/input": "2.0.0-alpha.6",
-    "@angular2-material/list": "2.0.0-alpha.6",
-    "@angular2-material/radio": "2.0.0-alpha.6",
-    "@angular2-material/sidenav": "2.0.0-alpha.6",
-    "@angular2-material/toolbar": "2.0.0-alpha.6",
+    "@angular2-material/core": "2.0.0-alpha.7-2",
+    "@angular2-material/button": "2.0.0-alpha.7-2",
+    "@angular2-material/card": "2.0.0-alpha.7-2",
+    "@angular2-material/checkbox": "2.0.0-alpha.7-2",
+    "@angular2-material/icon": "2.0.0-alpha.7-2",
+    "@angular2-material/input": "2.0.0-alpha.7-2",
+    "@angular2-material/list": "2.0.0-alpha.7-2",
+    "@angular2-material/radio": "2.0.0-alpha.7-2",
+    "@angular2-material/sidenav": "2.0.0-alpha.7-2",
+    "@angular2-material/toolbar": "2.0.0-alpha.7-2",
 
-    "angular2-in-memory-web-api": "0.0.14"
+    "angular2-in-memory-web-api": "0.0.15"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.9",
+    "@angular/compiler-cli": "0.5.0",
+    "@angular/tsc-wrapped": "0.2.2",
+
+    "angular-cli": "1.0.0-beta.10",
     "codelyzer": "0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
+    "karma": "1.1.1",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-jasmine": "1.0.2",
     "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
-    "typescript": "1.8.10",
-    "typings": "0.8.1"
+    "ts-node": "0.7.3",
+    "tslint": "3.13.0",
+    "typescript": "2.0.0",
+    "typings": "1.3.1"
   }
 }
